@@ -3,6 +3,9 @@ Revision history for DBIx::Class::ResultSet::RecursiveUpdate
 {{ $NEXT }}
     - Don't try to find a row by primary key if not all primary key columns are
       defined
+    - Reduce select queries for has_many relationships
+      to one per non-prefetched or none for prefetched has_many relationships
+      down from one per related row even for prefetched relationships
 
 0.34      2014-02-06 23:37:32 America/New_York
     - More changes to support custom CODE relationship condition
